--- a/rocketstats/rocketstats/Base.lproj/Main.storyboard
+++ b/rocketstats/rocketstats/Base.lproj/Main.storyboard
@@ -243,14 +243,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6zM-r1-h4c">
-                                <rect key="frame" x="313" y="80" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="lookupButtonPressed:" destination="9vA-Ti-XLa" eventType="touchUpInside" id="z8t-3V-haL"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="save_black" translatesAutoresizingMaskIntoConstraints="NO" id="1tM-e8-53t">
                                 <rect key="frame" x="16" y="361" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -283,6 +275,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6zM-r1-h4c">
+                                <rect key="frame" x="293" y="80" width="54" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Lookup"/>
+                                <connections>
+                                    <action selector="lookupButtonPressed:" destination="9vA-Ti-XLa" eventType="touchUpInside" id="z8t-3V-haL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -309,7 +310,7 @@
         <!--Rank-->
         <scene sceneID="f7B-ic-SVn">
             <objects>
-                <viewController id="tXA-dI-c4P" userLabel="Rank" customClass="RankViewController" sceneMemberID="viewController">
+                <viewController id="tXA-dI-c4P" userLabel="Rank" customClass="RankViewController" customModule="rocketstats" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AjC-eY-ZPz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -325,6 +326,11 @@
                                     <constraint firstAttribute="height" constant="44" id="fRH-lJ-YDf"/>
                                 </constraints>
                             </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KdE-ue-PUU">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -334,16 +340,19 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RpA-Fy-0N7"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Rank" image="personal" id="Yv3-vo-S18"/>
+                    <tabBarItem key="tabBarItem" title="Rank" image="rank" id="Yv3-vo-S18"/>
+                    <connections>
+                        <outlet property="rankingsTableView" destination="KdE-ue-PUU" id="ebP-BU-xgP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DWS-kZ-WFq" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="273" y="-695"/>
+            <point key="canvasLocation" x="272.80000000000001" y="-695.80209895052474"/>
         </scene>
         <!--Compare-->
         <scene sceneID="oR8-i0-ban">
             <objects>
-                <viewController id="kaR-iS-LtL" userLabel="Compare" customClass="CompareViewController" sceneMemberID="viewController">
+                <viewController id="kaR-iS-LtL" userLabel="Compare" customClass="CompareViewController" customModule="rocketstats" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Qnt-l0-PmG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -396,9 +405,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YNU-X9-0wU">
-                                <rect key="frame" x="313" y="80" width="46" height="30"/>
+                                <rect key="frame" x="311" y="80" width="51" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Lookup"/>
                                 <connections>
                                     <action selector="lookupButtonPressed:" destination="kaR-iS-LtL" eventType="touchUpInside" id="JBK-KN-EO2"/>
                                 </connections>
@@ -444,7 +453,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="N42-4P-kyz"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Lookup" image="lookup" id="vYF-6D-w4M"/>
+                    <tabBarItem key="tabBarItem" title="Compare" image="compare" id="vYF-6D-w4M"/>
                     <connections>
                         <outlet property="lookupButton" destination="YNU-X9-0wU" id="5gG-CO-AID"/>
                         <outlet property="lookupField" destination="fD2-G7-nVW" id="hLl-TJ-DQZ"/>
@@ -462,11 +471,13 @@
     <resources>
         <image name="accuracy_black" width="128" height="128"/>
         <image name="assist_black" width="128" height="128"/>
+        <image name="compare" width="23" height="23"/>
         <image name="goal_black" width="128" height="128"/>
         <image name="logo_black" width="972" height="93"/>
         <image name="lookup" width="23" height="23"/>
         <image name="mvp_black" width="128" height="128"/>
         <image name="personal" width="23" height="23"/>
+        <image name="rank" width="23" height="23"/>
         <image name="save_black" width="128" height="128"/>
         <image name="shot_black" width="128" height="128"/>
     </resources>
